Fixed sizing and alignment for larger screens

--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,6 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1.5rem;
-    padding-block: 2rem;
 }
 
 .card {
@@ -112,13 +111,34 @@ h2 {
 
     /* Breakpoint set according to card design  */
 @media screen and (min-width: 39rem) {
+
+    main {
+        display: grid;
+        place-items: center;
+    }
+
     .grid-container {
         grid-template-columns: repeat(6, minmax(0,max-content));
         grid-template-rows: repeat(4, minmax(0,max-content));
+        gap: 1.9rem;
+    }
+
+    h1 {
+        font-size: 2.25rem;
+    }
+    
+    h2 {
+        font-size: 1.25rem;
+    }
+
+    .sub-heading {
+        width: 33.75rem;
+        align-self: center;
     }
 
     .card {
         max-inline-size: 21.875rem;
+        max-block-size: 15.625rem;
         padding: 2rem;
     }
     
@@ -133,12 +153,12 @@ h2 {
     }
 
     .card-three {
-        grid-column: 5 / 7;
-        grid-row: 2 / 4;
+        grid-column: 3 / 5;
+        grid-row: 3 / 5;
     }
 
     .card-four {
-        grid-column: 3 / 5;
-        grid-row: 3 / 5;
+        grid-column: 5 / 7;
+        grid-row: 2 / 4;
     }
 }
